--- a/Veris/src/main/resources/fxml/languageSpecEditor.fxml
+++ b/Veris/src/main/resources/fxml/languageSpecEditor.fxml
@@ -26,7 +26,7 @@
          <children>
             <VBox>
                <children>
-                  <Label text="Language Name:">
+                  <Label text="%label_language_name">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -36,7 +36,7 @@
                         <Insets top="2.0" />
                      </VBox.margin>
                   </TextField>
-                  <Label text="File Extensions (comma separated):">
+                  <Label text="%label_file_extensions">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -49,7 +49,7 @@
                         <Insets top="2.0" />
                      </VBox.margin>
                   </TextField>
-                  <Label text="Compile Command:">
+                  <Label text="%label_compile_command">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -62,7 +62,7 @@
                         <Insets top="2.0" />
                      </VBox.margin>
                   </TextArea>
-                  <Label text="Execution Command:">
+                  <Label text="%label_execution_command">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -79,12 +79,12 @@
             </VBox>
             <VBox spacing="5.0" styleClass="box-with-border" GridPane.rowIndex="1">
                <children>
-                  <CheckBox fx:id="checkBoxIsAllowed" mnemonicParsing="false" selected="true" text="Is Allowed">
+                  <CheckBox fx:id="checkBoxIsAllowed" mnemonicParsing="false" selected="true" text="%check_box_is_allowed">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </CheckBox>
-                  <CheckBox fx:id="checkBoxNeedsCompile" mnemonicParsing="false" selected="true" text="Needs Compile">
+                  <CheckBox fx:id="checkBoxNeedsCompile" mnemonicParsing="false" selected="true" text="%check_box_needs_compile">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -98,7 +98,7 @@
                       <RowConstraints vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="Auto-Detect Language Priority">
+                        <Label text="%label_auto_detect_language_priority">
                            <font>
                               <Font size="16.0" />
                            </font>
@@ -133,12 +133,12 @@
             <RowConstraints vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Button fx:id="buttonCancel" cancelButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleCancelButtonAction" text="Cancel">
+            <Button fx:id="buttonCancel" cancelButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleCancelButtonAction" text="%cancel">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="buttonSave" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSaveButtonAction" text="Save" GridPane.columnIndex="1">
+            <Button fx:id="buttonSave" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSaveButtonAction" text="%save" GridPane.columnIndex="1">
                <font>
                   <Font size="18.0" />
                </font>
